# rules_sphinx

./: LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod
sphinx/: defs.bzl  direct_repositories.bzl  indirect_repositories.bzl
sphinx/tools/: BUILD  requirements.txt  sphinx_build_wrapper.py
test/: BUILD  conf.py  external_file.txt  gen_source.rst  index.rst
test/root_dir/: BUILD  index.rst
test/root_dir/subdir/: BUILD  test_file.rst
