module(name = "rules_sphinx", version = "0.0.0")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_python", version = "1.0.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "sphinx_deps",
    python_version = "3.11",
    requirements_lock = "//sphinx/tools:requirements.txt",
)
use_repo(pip, "sphinx_deps")
